Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,17 +37,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### First solve it for one element"
+    "#Somthing I have learnt with filters is:\n",
+    "# Filters use a function with a sequence of data which could be a list\n",
+    "# ie filter(function, sequence)\n",
+    "#however the filter fnx does not modify the pre-existing list it just filters it out.\n",
+    "# For a filter function to filter it out there has to be a filter criteria.\n",
+    "#The most common filter criteria is 'x % y'\n",
+    "# When using filters always define the function first with it's filter criteria"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before determining how to categorize all elements in a list, let's just answer the question of whether one element is even.  We can do so by making use of the modulo operator, `%`.  The % returns the remainder resulting from dividing a number by another.  For example:"
+    "### First solve it for one element"
    ]
   },
   {
@@ -135,17 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_even(number):\n",
-    "    return number % 2 == 0"
+    "    return number % 2 == 0 #even numbers filter criteria in a  function as True or False)\n",
+    "\n",
+    "#This fnx has a filter criteria that will return only even numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +163,17 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "True\n"
+      "True\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
     "print(is_even(3)) # False\n",
-    "print(is_even(100)) # True"
+    "print(is_even(100)) # True\n",
+    "print (is_even(350))\n",
+    "print(is_even(43))"
    ]
   },
   {
@@ -178,21 +192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def select_even(elements):\n",
-    "    selected = []\n",
+    "    selected = []  #this is a new list that is required for this function\n",
     "    for element in elements:\n",
-    "        if is_even(element):\n",
-    "            selected.append(element)\n",
-    "    return selected"
+    "        if is_even(element): #argument using even nos fnx created earlier\n",
+    "            selected.append(element) #This will simply append all even nos to a new list\n",
+    "    return selected #Prints out all elements that support is_even fnx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +215,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +236,7 @@
        "[0, 2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,14 +270,14 @@
        "['camping', 'biking']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def ends_ing(word):\n",
-    "    return word.endswith('ing')\n",
+    "    return word.endswith('ing') #Is this a true or False statement? Does not generate a list\n",
     "\n",
     "def select_ing(elements):\n",
     "    selected = []\n",
@@ -322,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -330,16 +344,16 @@
     {
      "data": {
       "text/plain": [
-       "<filter at 0x10642fda0>"
+       "<filter at 0x7f4fdc1fd400>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filter(is_even,numbers)"
+    "filter(is_even,numbers) #returns an object if not in a list"
    ]
   },
   {
@@ -351,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -362,13 +376,13 @@
        "[0, 2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(filter(is_even, numbers))"
+    "list(filter(is_even, numbers)) #Must always be a list for it to give you data"
    ]
   },
   {
@@ -380,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +403,7 @@
        "['camping', 'biking']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,6 +480,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I believe filters are for T/F criterias. So the functions they work with has to be associated with a T/F value for the filter to generate a list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Summary"
    ]
   },
@@ -493,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
